<resources>
    <string name="app_name">Score Keeper</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="team1Score">0</string>
    <string name="team2Score">0</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="night_mode">Night Mode</string>
</resources>