<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/team1Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="30dp"
                android:text="@string/team_1"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/team1Score"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/team1Score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="75sp" />
            <Spinner
                android:id="@+id/scoringSpinnerTeam1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:dropDownWidth="100dp"
                android:textSize="18sp"
                android:minHeight="48dp" />
            <Button
                android:id="@+id/team1IncreaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:width="150dp"
                android:fontFamily="sans-serif"
                android:text="@string/increase"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <Button
                android:id="@+id/team1DecreaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:width="150dp"
                android:fontFamily="sans-serif"
                android:text="@string/decrease"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/team2Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="30dp"
                android:text="@string/team_2"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/team2Score"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/team2Score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="75sp" />
            <Spinner
                android:id="@+id/scoringSpinnerTeam2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:dropDownWidth="100dp"
                android:textSize="18sp"
                android:minHeight="48dp" />
            <Button
                android:id="@+id/team2IncreaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:width="150dp"
                android:fontFamily="sans-serif"
                android:text="@string/increase"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <Button
                android:id="@+id/team2DecreaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:width="150dp"
                android:fontFamily="sans-serif"
                android:text="@string/decrease"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
